# Modern-CMake-for-Cpp

examples/chapter02/01-arguments/: bracket.cmake
examples/chapter02/02-variables/: set.cmake
examples/chapter02/04-scope/: CMakeLists.txt
examples/chapter02/06-conditional/: conditional.cmake
examples/chapter02/08-definitions/: function.cmake
examples/chapter03/05-structure/: CMakeLists.txt
examples/chapter03/06-toolchain/: CMakeLists.txt
examples/chapter03/07-features/: CMakeLists.txt
examples/chapter04/01-targets/: CMakeLists.txt
examples/chapter04/02-propagated/: CMakeLists.txt
