cmake_minimum_required(VERSION 3.20.0)
project(Standard CXX)

message("OS = ${CMAKE_SYSTEM_NAME}, ver = ${CMAKE_SYSTEM_VERSION}")
message("host info = ${CMAKE_HOST_SYSTEM} ${CMAKE_HOST_SYSTEM_NAME} ${CMAKE_HOST_SYSTEM_PROCESSOR} ${CMAKE_HOST_SYSTEM_VERSION}")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(Standard main.cpp)
